--- a/weewxapp/DEBIAN/changelog
+++ b/weewxapp/DEBIAN/changelog
@@ -1,8 +1,14 @@
+weewxapp (0.0.3) stable; urgency=medium
+
+  * Bug fix to make metric setting stick
+
+ -- evilbunny <evilbunny@evilbunny.org>  Tue, 29 Dec 2020 19:30:00 +1100
+
 weewxapp (0.0.2) stable; urgency=medium
 
   * Bug fixes in conversion code
 
- -- evilbunny <evilbunny@evilbunny.org>  Fri, 28 Dec 2020 19:30:00 +1100
+ -- evilbunny <evilbunny@evilbunny.org>  Mon, 28 Dec 2020 19:30:00 +1100
 
 weewxapp (0.0.1) stable; urgency=medium
 
