--- a/weewxapp/DEBIAN/changelog
+++ b/weewxapp/DEBIAN/changelog
@@ -1,3 +1,9 @@
+weewxapp (0.0.5) stable; urgency=medium
+
+  * Updated user agent string
+
+ -- evilbunny <evilbunny@evilbunny.org>  Fri, 1 Jan 2021 15:30:00 +1100
+
 weewxapp (0.0.4) stable; urgency=medium
 
   * Put save settings in it's own thread 
